[build-system]
requires = ['setuptools>=61.0.0','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'acgoogle'
version = '0.1.0'
description = 'Manage the activity of Google accounts'
readme = 'README.MD'
authors = [{name = 'su yang'}]
license = {file = 'LICENSE'}
requires-python = '>=3.11'
dependencies = ['click >= 8.1.3']

[project.optional-dependencies]
dev = ['black', 'mypy', 'pytest']

[project.urls]
Github = 'https://github.com/amsuyang/acgoogle.git'

[project.scripts]
acg = 'acgoogle.__main__:main'
